@@ -5,6 +5,7 @@ Contract Configurator 1.9.6
 - Fixed warnings for newer DMagic Orbital Science experiments.
 - Fixed (Optional) text being output when it shouldn't (thanks Keniamin).
 - Fixed issue with passenger load dialog being shown with incorrect details (thanks smjjames).
+- Fixed issue with defineList when the vessel id haapens to start with a number.
 
 Contract Configurator 1.9.5
 - Output additional log files when log level is debug or higher (thanks linuxgurugamer).
